# quagga

./: .gitignore  CMakeLists.txt  Makefile  config.h  run.sh
babeld/: babel_filter.c  babel_filter.h  babel_interface.c  babel_interface.h  babel_main.c  babel_main.h  babel_zebra.c  babel_zebra.h  babeld.c  babeld.h  kernel.c  kernel.h  message.c  message.h  neighbour.c  neighbour.h  net.c  net.h  resend.c  resend.h  route.c  route.h  source.c  source.h  util.c  util.h  xroute.c  xroute.h
bgpd/: bgp_advertise.c  bgp_advertise.h  bgp_aspath.c  bgp_aspath.h  bgp_attr.c  bgp_attr.h  bgp_clist.c  bgp_clist.h  bgp_community.c  bgp_community.h  bgp_damp.c  bgp_damp.h  bgp_debug.c  bgp_debug.h  bgp_dump.c  bgp_dump.h  bgp_ecommunity.c  bgp_ecommunity.h  bgp_filter.c  bgp_filter.h  bgp_fsm.c  bgp_fsm.h  bgp_main.c  bgp_mpath.c  bgp_mpath.h  bgp_mplsvpn.c  bgp_mplsvpn.h  bgp_network.c  bgp_network.h  bgp_nexthop.c  bgp_nexthop.h  bgp_open.c  bgp_open.h  bgp_packet.c  bgp_packet.h  bgp_regex.c  bgp_regex.h  bgp_route.c  bgp_route.h  bgp_routemap.c  (+10 more)
etc/: ospfd.conf  zebra.conf
fpm/: fpm.h
isisd/: dict.c  dict.h  isis_adjacency.c  isis_adjacency.h  isis_bpf.c  isis_circuit.c  isis_circuit.h  isis_common.h  isis_constants.h  isis_csm.c  isis_csm.h  isis_dlpi.c  isis_dr.c  isis_dr.h  isis_dynhn.c  isis_dynhn.h  isis_events.c  isis_events.h  isis_flags.c  isis_flags.h  isis_lsp.c  isis_lsp.h  isis_main.c  isis_misc.c  isis_misc.h  isis_network.h  isis_pdu.c  isis_pdu.h  isis_pfpacket.c  isis_route.c  isis_route.h  isis_routemap.c  isis_spf.c  isis_spf.h  isis_tlv.c  isis_tlv.h  isis_zebra.c  isis_zebra.h  isisd.c  isisd.h  (+2 more)
lib/: CMakeLists.txt  Makefile  agentx.c  buffer.c  buffer.h  checksum.c  command.c  command.h  daemon.c  distribute.c  distribute.h  filter.c  filter.h  getopt.c  getopt.h  getopt1.c  hash.c  hash.h  if.c  if.h  if_rmap.c  if_rmap.h  jhash.c  jhash.h  keychain.c  keychain.h  libospf.h  linklist.c  linklist.h  log.c  log.h  md5.c  md5.h  memory.c  memory.h  memtypes.c  memtypes.h  network.c  network.h  pid_output.c  (+42 more)
ospf6d/: ospf6_abr.c  ospf6_abr.h  ospf6_area.c  ospf6_area.h  ospf6_asbr.c  ospf6_asbr.h  ospf6_flood.c  ospf6_flood.h  ospf6_interface.c  ospf6_interface.h  ospf6_intra.c  ospf6_intra.h  ospf6_lsa.c  ospf6_lsa.h  ospf6_lsdb.c  ospf6_lsdb.h  ospf6_main.c  ospf6_message.c  ospf6_message.h  ospf6_neighbor.c  ospf6_neighbor.h  ospf6_network.c  ospf6_network.h  ospf6_proto.c  ospf6_proto.h  ospf6_route.c  ospf6_route.h  ospf6_snmp.c  ospf6_snmp.h  ospf6_spf.c  ospf6_spf.h  ospf6_top.c  ospf6_top.h  ospf6_zebra.c  ospf6_zebra.h  ospf6d.c  ospf6d.h
ospfclient/: ospf_apiclient.c  ospf_apiclient.h  ospfclient.c
ospfd/: CMakeLists.txt  Makefile  ospf_abr.c  ospf_abr.h  ospf_api.c  ospf_api.h  ospf_apiserver.c  ospf_apiserver.h  ospf_asbr.c  ospf_asbr.h  ospf_ase.c  ospf_ase.h  ospf_dump.c  ospf_dump.h  ospf_flood.c  ospf_flood.h  ospf_ia.c  ospf_ia.h  ospf_interface.c  ospf_interface.h  ospf_ism.c  ospf_ism.h  ospf_lsa.c  ospf_lsa.h  ospf_lsdb.c  ospf_lsdb.h  ospf_main.c  ospf_neighbor.c  ospf_neighbor.h  ospf_network.c  ospf_network.h  ospf_nsm.c  ospf_nsm.h  ospf_opaque.c  ospf_opaque.h  ospf_packet.c  ospf_packet.h  ospf_route.c  ospf_route.h  ospf_routemap.c  (+12 more)
pimd/: pim_assert.c  pim_assert.h  pim_cmd.c  pim_hello.c  (+53 more)
zebra/: CMakeLists.txt  Makefile  connected.c  connected.h  debug.c  debug.h  if_ioctl.c  if_ioctl_solaris.c  if_netlink.c  if_sysctl.c  interface.c  interface.h  ioctl.c  ioctl.h  ioctl_null.c  ioctl_solaris.c  ipforward.h  ipforward_proc.c  ipforward_solaris.c  ipforward_sysctl.c  irdp.h  irdp_interface.c  irdp_main.c  irdp_packet.c  kernel_null.c  kernel_socket.c  kernel_socket.h  main.c  misc_null.c  redistribute.c  redistribute.h  redistribute_null.c  rib.h  router-id.c  rt.h  rt_netlink.c  rt_netlink.h  rt_socket.c  rtadv.c  rtadv.h  (+14 more)
(+63 files in other folders)
